fixed the gsap layout breaking issues

--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,10 @@
 
 
 
-
+html,
+body{
+    overflow-x:hidden;
+}
 .navbar-brand img{
     width: 250px;
     height: 39px;
